Add playing node to receive state notification of when content is playing

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "node-red": {
     "nodes": {
       "server": "nodes/server.js",
-      "notification": "nodes/notification.js"
+      "notification": "nodes/notification.js",
+      "playing": "nodes/playing.js"
     }
   },
   "repository": "git+https://github.com/scraton/node-red-contrib-plex-ws.git",
