--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/scraton/node-red-contrib-plex-ws#readme",
   "dependencies": {
     "plex-api": "^5.2.0",
+    "promise-retry": "^1.1.1",
     "ws": "^6.0.0"
   },
   "devDependencies": {
