--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3.1'
 
 services:
   node-red:
-    image: nodered/node-red-docker:0.20.5-slim-v10
+    image: nodered/node-red:1.2.6
     volumes:
-      - nodered:/data
+      # - nodered:/data
       - '.:/data/node_modules/node-red-contrib-plex-ws'
     ports:
       - 1880:1880
